fix: style buttons and fix spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,15 @@ nav {
   justify-content: space-between;
 }
 
+header button {
+  border: none;
+  padding: 0.5rem 2rem;
+  box-shadow: 0.1rem 0.1rem 0.1rem rgb(196, 196, 196);
+}
+header button:active {
+  box-shadow: none;
+}
+
 /* content */
 
 #content {
@@ -51,7 +60,9 @@ nav {
 
 .search input {
   flex: 1;
+
   border: none;
+  padding-left: 1rem;
 }
 
 /* menu */
